<resources>
    <string name="app_name">Home Manager</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Furtka">Furtka</string>
    <string name="brama">Brama</string>

    <string name="loadText">Pobieranie danych</string>
    <string name="emptyTempText">--.- ℃</string>

    <string name="gateText">Garaż</string>
    <string name="gate1Text">Brama</string>
    <string name="doorText">Furtka</string>

    <string name="gardenText">Ogród</string>
    <string name="heatText">Piec</string>
    <string name="mediaText">Media</string>

    <string name="ctrlText">Sterowanie</string>
    <string name="alarmText">Alarm</string>
    <string name="infoText">Info</string>


    <!-- Dialog -->
    <string name="InfoNoData">Brak danych</string>
    <string name="InfoAlarmArmed">Alarm uzbrojony - brak ruchu</string>
    <string name="InfoAlarmNoArmed">W domu są osoby</string>
    <string name="InfoAlarmTime">Budzik start</string>
    <string name="InfoAlarmStation">Stacja radiowa</string>
    <string name="InfoAlarmTimeOff">Budzik stop</string>
    <string name="InfoAlarmVolume">Głośność[%]</string>
    <string name="InfoAlarmMode0">Alarm wyłączony</string>
    <string name="InfoAlarmMode1">Tylko dni tygodnia</string>
    <string name="InfoAlarmMode2">Zawsze włączony</string>
    <string name="InfoRainOccurs">Dzisiaj zanotowano opady deszczu</string>
    <string name="InfoRainNotOccurs">Dzisiaj nie zanotowano opadu deszczu</string>
    <string name="InfoHeater">Dziś piec pracuje</string>
    <string name="InfoEnergyTotal">Wygenerowana moc </string>
    <string name="InfoVersion">Wersja 1.5.1</string>

    <string name="GateOpenText">Na jak długo chesz otworzyć bramę ?</string>
    <string name="GateOpenMessage">Otwieranie bramy wjazdowej</string>
    <string name="YesButton">Na stałe</string>
    <string name="NoButton">Na chwilę</string>
    <string name="CancelButton">Nie otwieraj</string>
    <string name="SaveButton">Zapisz nowe ustawienia</string>
    <string name="ChangePassButton">Zmień hasło</string>
    <string name="NewPasswordText">Podaj nowe hasło</string>
    <string name="NewRemoteHost">Zdalny serwer</string>
    <string name="NewLocalHost">IP domowego HCC</string>
    <string name="DeviceIDText">HCC ID (np. 00000643)</string>
    <string name="CloseButton">Zamknij</string>
    <string name="NextButton">Następny</string>
    <string name="AutoWaterButton">Automatyczne podlewanie</string>
    <string name="WaterButton1">Zraszacze w polu 1</string>
    <string name="WaterButton2">Zraszacze w polu 2</string>
    <string name="WaterButton3">Zraszacze w polu 3</string>
    <string name="StopButton">Stop</string>

    <string name="ctrlPanel">Sterowanie</string>
    <string name="piePanel">Tryb</string>
    <string name="linePanel">Temp</string>
    <string name="infoPanel">Info</string>
    <string name="cameraPanel">Kamery</string>
    <string name="settingPanel">Ustawienia</string>
    <string name="DirectionA">Gdańsk</string>
    <string name="DirectionB">Gdynia</string>

    <string name="Sprinklers">Zraszacze</string>
    <string name="pieChartLabel1">Czas całkowity</string>
    <string name="pieChartLabel2">Czas dzienny</string>

    <!-- hint messages -->
    <string name="HintAutoWaterScheduled">Automatyczne podlewanie zaplanowane</string>
    <string name="HintWaitForData">Czekam na odpowiedź</string>
    <string name="HintSettingsSaveDone">Ustawienia zapisane</string>
    <string name="HintErrorMessage">Błąd wewnętrzny</string>
    <string name="HintYTSent">Film został przesłany</string>

    <!-- charts -->
    <string name="DayMode">Tryb dzienny</string>
    <string name="NightMode">Tryb nocny</string>
    <string name="OffMode">Piec wyłączony</string>
    <string name="insideTemp">Temp wewnątrz</string>
    <string name="outsideTemp">Temp zewnętrzna</string>

    <!-- alarm text -->
    <string name="AlarmEnabled">Alarm włączony</string>
    <string name="AlarmDisabled">Alarm wyłączony</string>
    <string name="AlarmOn">Aktywuj alarm</string>
    <string name="AlarmOff">Wyłącz alarm</string>

    <!-- heater settings -->
    <string name="DayTempSetting">Dzień [ºC]</string>
    <string name="NightTempSetting">Noc [ºC]</string>
    <string name="SupportTempSetting">Załączenie od[ºC]</string>
    <string name="MainModeEnableSetting">Grzanie główne</string>
    <string name="AdditionModeEnableSetting">Grzanie dodatkowe</string>

    <!-- garden settings -->
    <string name="waterDuration">Czas podlewania[min]</string>
    <string name="timeToStartAutoWater">Godzina włączenia</string>

    <!-- Error messages -->
    <string name="connectionError">Brak połączenia</string>

    <!-- URL -->
    <string name="RemoteUrl">kwiatowa13.ovh</string>
    <string name="VersionUrl">/version</string>
    <string name="VolumeUpUrl">/VolumeUp</string>
    <string name="VolumeDownUrl">/VolumeDown</string>

    <!-- week days -->
    <string-array
        name="months_name">
        <item>Styczeń</item>
        <item>Luty</item>
        <item>Marzec</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesień</item>
        <item>Październik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </string-array>
</resources>