<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="com.homemanager.HomeManager">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/settingGarden"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="top"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:visibility="gone">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|clip_vertical|start|center_horizontal"
                    android:text="@string/timeToStartAutoWater" />

                <EditText
                    android:id="@+id/startTimeText"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|left"
                    android:ems="10"
                    android:gravity="start|left"
                    android:inputType="time"
                    android:scaleX="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:text="@string/waterDuration" />

                <EditText
                    android:id="@+id/durationText"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:ems="10"
                    android:inputType="number"
                    android:scaleX="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:text="@string/Sprinklers" />

                <ToggleButton
                    android:id="@+id/globalStateButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="start|left"
                    android:text="ToggleButton" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/switch0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Switch
                        android:id="@+id/switch3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/switch4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Switch
                        android:id="@+id/switch5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Switch
                        android:id="@+id/switch6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="386dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/saveGardenSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_span="2"
                    android:text="@string/SaveButton" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/ctrlGarden"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/sprinkler1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/WaterButton1" />

            <Button
                android:id="@+id/sprinkler2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/WaterButton2" />

            <Button
                android:id="@+id/sprinkler3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/WaterButton3" />

            <Button
                android:id="@+id/autoWaterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/AutoWaterButton" />

            <Button
                android:id="@+id/stopBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/StopButton" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:tabTextAppearance="@style/TextAppearance.AppCompat.Small">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/infoPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ctrlPanel" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/settingPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingPanel" />

        </com.google.android.material.tabs.TabLayout>

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_gravity="bottom"
            android:text="@string/CloseButton" />

    </LinearLayout>

</FrameLayout>