<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/settingNetworkPanel"
            android:layout_width="match_parent"
            android:layout_height="350sp"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp">

                <TextView
                    android:id="@+id/netDevIdText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:text="@string/DeviceIDText" />

                <EditText
                    android:id="@+id/netDevID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp">

                <TextView
                    android:id="@+id/netPassText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:text="@string/NewPasswordText" />

                <EditText
                    android:id="@+id/netPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp">

                <TextView
                    android:id="@+id/netLocalHostText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:text="@string/NewLocalHost" />

                <EditText
                    android:id="@+id/netLocalHost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/networkPassButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/SaveButton" />

        <Button
            android:id="@+id/networkCloseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CloseButton" />
    </LinearLayout>
</FrameLayout>